[package]
name = "mysql_avatar"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = {version = "4.5.43", features = ["derive", "env", "cargo"]}
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
log4rs = {version = "1.3.0", features=["all_components", "config_parsing", "toml_format"]}
mysql_async = {version = "0.36.1", features = ["binlog"]}
mysql_common = "0.35.5"
num_enum = "0.7.4"
rand = "0.9.2"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["serde_derive"]}
sha1 = "0.10.6"
tokio = {version = "1.47.1", features = ["full"]}
tokio-stream = "0.1.17"
toml = "0.9.5"
uuid = {version = "1.17.0", features = ["v4"]}
